rollback security